# qrcode-generator-rust

./: .dockerignore  Cargo.toml  Dockerfile  Jenkinsfile  README.md  docker-compose.yml
src/: handler.rs  main.rs  route.rs
src/utils/: create_qrcode.rs  http.rs  img.rs  mod.rs
