[package]
name = "qrcode-generator"
version = "0.4.0"
authors = ["WITSUDI"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
axum-macros = "0.4.1"
image = "0.25.1"
moka = { version = "0.12", features = ["future"] }
qrcode = "0.14.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
tokio-util = "0.7.11"
tower-http = { version = "0.5.2", features = ["full"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
